# AgeOfMagic

./: CMakeLists.txt  main  main.cpp
scenes/: SceneManager.cpp  SceneManager.hpp
scenes/main-menu/: MainMenu.cpp  MainMenu.h
scenes/ui/: MainMenuButton.cpp  MainMenuButton.hpp
utils/config/: FontManager.cpp  FontManager.hpp  GameConfig.cpp  GameConfig.h
utils/renderer/: Scene.cpp  Scene.h
